--- a/source/src/os_interface/os_interface.vcproj
+++ b/source/src/os_interface/os_interface.vcproj
@@ -18,8 +18,8 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			OutputDirectory="$(TEMP)\$(SolutionName)\$(ConfigurationName)"
+			IntermediateDirectory="$(TEMP)\$(SolutionName)\$(ConfigurationName)\$(ProjectName)"
 			ConfigurationType="4"
 			CharacterSet="1"
 			>
@@ -80,8 +80,8 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			OutputDirectory="$(TEMP)\$(SolutionName)\$(ConfigurationName)"
+			IntermediateDirectory="$(TEMP)\$(SolutionName)\$(ConfigurationName)\$(ProjectName)"
 			ConfigurationType="4"
 			CharacterSet="1"
 			WholeProgramOptimization="1"
@@ -160,12 +160,24 @@
 			</File>
 		</Filter>
 		<Filter
-			Name="Header Files"
+			Name="global"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
 				RelativePath=".\os_interface.h"
+				>
+			</File>
+			<File
+				RelativePath=".\linux\perheader.h"
+				>
+			</File>
+			<File
+				RelativePath=".\utility.c"
+				>
+			</File>
+			<File
+				RelativePath=".\utility.h"
 				>
 			</File>
 		</Filter>
@@ -179,11 +191,35 @@
 			Name="linux"
 			>
 			<File
+				RelativePath=".\linux\lock.c"
+				>
+			</File>
+			<File
 				RelativePath=".\linux\msgQueue.c"
 				>
 			</File>
 			<File
+				RelativePath=".\linux\mutex.c"
+				>
+			</File>
+			<File
 				RelativePath=".\linux\process.c"
+				>
+			</File>
+			<File
+				RelativePath=".\linux\semaphore.c"
+				>
+			</File>
+			<File
+				RelativePath=".\linux\sm.c"
+				>
+			</File>
+			<File
+				RelativePath=".\linux\thread.c"
+				>
+			</File>
+			<File
+				RelativePath=".\linux\timer.c"
 				>
 			</File>
 		</Filter>
