--- a/source/mk.config
+++ b/source/mk.config
@@ -7,10 +7,16 @@ ARLIB = ar
 
 CONFIG_NAME = Debug
 
+
+ifeq ($(CONFIG_NAME),Debug)
 MACRO_FLAGS := 
-GLOBAL_CFLAGS :=
+GLOBAL_CFLAGS :=-g3 
 GLOBAL_CPPFLAGS := 
 GLOBAL_LFLAGS :=
+else
+
+endif
+
 
 OUTPUT = /tmp/$(ProjectName)/$(CONFIG_NAME)/
 TEMP_DIR = /tmp/$(ProjectName)/$(CONFIG_NAME)/$(ModuleName)/
