--- a/source/src/render/RenderScript/Makefile
+++ b/source/src/render/RenderScript/Makefile
@@ -7,7 +7,7 @@ Target=libngre_script.a
 
 
 IncludeDirs = 
-ProjectCFlag= -I.
+ProjectCFlag= -I. -I../RenderEngine
 ProjectCppFlag=
 
 ProjectLinkFlag:= -m32
