提交kernel的测试代码+一些收集的第三方toolkit代码

--- a/source/src/kernel/makefile
+++ b/source/src/kernel/makefile
@@ -1,9 +1,9 @@
 include ../../mk.config
 ###################################################################
 ProjectName=DemoOS
-ModuleName=os_interface
+ModuleName=ngoskernel
 TargetType=Lib
-Target=libosi_interface.a
+Target=libngoskernel.a
 
 IncludeDirs = 
 ProjectCFlag= -I ../../inc
