--- a/source/src/kernel/kernel.vcproj
+++ b/source/src/kernel/kernel.vcproj
@@ -240,6 +240,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\objectIndex\RectList.c"
+				>
+			</File>
+			<File
+				RelativePath=".\objectIndex\RectList.h"
+				>
+			</File>
+			<File
 				RelativePath=".\objectIndex\UIObjectRectIndex.c"
 				>
 			</File>
