resource identifier   |  operation

--- a/source/src/resource_manager/Makefile
+++ b/source/src/resource_manager/Makefile
@@ -7,7 +7,7 @@ Target=libngrm.a
 
 
 IncludeDirs = 
-ProjectCFlag= -I. 
+ProjectCFlag= -I. -I../render/RenderEngine
 ProjectCppFlag= -I.
 
 ProjectLinkFlag:= 
