render engine no gl 跑过

--- a/source/mk.config
+++ b/source/mk.config
@@ -11,7 +11,7 @@ CONFIG_NAME = Debug
 ifeq ($(CONFIG_NAME),Debug)
 MACRO_FLAGS := 
 GLOBAL_CFLAGS :=-g3 
-GLOBAL_CPPFLAGS := 
+GLOBAL_CPPFLAGS :=-g3
 GLOBAL_LFLAGS :=
 else
 
