加入一些和inpuat action有关的内容和想法

--- a/source/src/kernel/kernel.vcproj
+++ b/source/src/kernel/kernel.vcproj
@@ -148,6 +148,14 @@
 			Name="Input"
 			>
 			<File
+				RelativePath=".\input\InputAction.c"
+				>
+			</File>
+			<File
+				RelativePath=".\input\InputAction.h"
+				>
+			</File>
+			<File
 				RelativePath=".\input\InputTarget.c"
 				>
 			</File>
