貌似git使用有问题，有些文件的版本错了。

--- a/source/mk.config
+++ b/source/mk.config
@@ -1,10 +1,20 @@
+ARCH=pc
+
+ifeq ($(ARCH),pc)
 CC = gcc
 CPPC = g++
 ASMC = nasm
 
 LINKER = g++
 ARLIB = ar
+endif
 
+ifeq ($(ARCH),arm)
+CC=arm-linux-gcc
+CPPC=arm-linx-g++
+LINKER=arm-linux-g++
+ARLIB=arm-linux-ar
+endif
 CONFIG_NAME = Debug
 
 
