--- a/source/src/render/SpeedTests/Makefile
+++ b/source/src/render/SpeedTests/Makefile
@@ -1,7 +1,7 @@
 include ../../../mk.config
 
-SKIA_PATH=/root/win_work/skia
-SKIA_OUT:=$(SKIA_PATH)/linux_out/$(CONFIG_NAME)/obj.target/gyp
+SKIA_PATH=/root/skia/trunk
+SKIA_OUT:=$(SKIA_PATH)/linux_out/$(CONFIG_NAME)
 
 ###################################################################
 ProjectName=render
