add uiobject map and getuiobject support.

--- a/source/src/kernel/kernel.vcproj
+++ b/source/src/kernel/kernel.vcproj
@@ -264,6 +264,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\objectIndex\UIObjectMap.c"
+				>
+			</File>
+			<File
+				RelativePath=".\objectIndex\UIObjectMap.h"
+				>
+			</File>
+			<File
 				RelativePath=".\objectIndex\UIObjectRectIndex.c"
 				>
 			</File>
