--- a/source/test/mk.config
+++ b/source/test/mk.config
@@ -1,6 +1,6 @@
-ARCH=pc
+ARCH=android
 ANDROID_PATH=/media/android/android-4.0.3_r1
-SKIA_PATH=~/skia/trunk/
+SKIA_PATH=/root/win_work/skia
 SKIA_OUT:=$(SKIA_PATH)/linux_out/$(CONFIG_NAME)/obj.target/gyp
 
 ifeq ($(ARCH),pc)
@@ -41,7 +41,7 @@ CPPC=$(ANDROID_BUILD_TOOL)g++ -I$(ANDROID_PATH)/system/core/include   \
 			-I$(ANDROID_PATH)/bionic \
 			-I$(ANDROID_PATH)/external/stlport/stlport \
 			-DANDROID 
-LINKER=$(ANDROID_BUILD_TOOL)g++ -L$(ANDROID_PATH)/out/target/product/generic/obj/lib --sysroot=$(ANDROID_PATH)/out/target/product/generic/obj
+LINKER=$(ANDROID_BUILD_TOOL)g++
 ARLIB=$(ANDROID_BUILD_TOOL)ar
 endif
 
