--- a/source/test/testKernel/makefile
+++ b/source/test/testKernel/makefile
@@ -1,7 +1,4 @@
 include ../../mk.config
-
-SKIA_PATH=/root/skia/trunk
-SKIA_OUT:=$(SKIA_PATH)/linux_out/$(CONFIG_NAME)
 ###################################################################
 ProjectName=DemoOS
 ModuleName=testKernel
@@ -14,8 +11,15 @@ ProjectCppFlag=
 
 LibDirs=$(SKIA_OUT) $(OUTPUT) $(OUTPUT)../../resource_manager/$(CONFIG_NAME) $(OUTPUT)../../render/$(CONFIG_NAME)
 ProjectLinkFlag=
-LinkLibs=osi_interface pthread ngoskernel uiobjects rt skia_effects skia_images skia_core skia_opts skia_opts_ssse3 skia_ports skia_sfnt skia_utils cityhash skia_gr  \
-		skia_skgr pthread freetype fontconfig dl GL GLU png lua ngre_engine ngre_script ngrm
+
+
+LinkLibs:=osi_interface ngoskernel uiobjects lua ngre_engine ngre_script ngrm toolkit
+
+ifeq ($(ARCH), android)
+	LinkLibs += skia stdc++ stlport c m
+else
+	LinkLibs += rt pthread cityhash jpeg pthread freetype fontconfig dl GL GLU png skia_effects skia_images skia_core skia_opts skia_opts_ssse3 skia_ports skia_sfnt skia_utils skia_gr skia_skgr 
+endif
 
 ####################################################################
 cfiles := main.c
