--- a/source/src/os_interface/makefile
+++ b/source/src/os_interface/makefile
@@ -12,8 +12,10 @@ ProjectCppFlag=
 ProjectLinkFlag=
 LinkLibss=
 SubDir = linux
+SubFileDirs = linux
 ifeq ($(ARCH),android)
 SubDir = android
+SubFileDirs = android
 endif
 
 
