--- a/source/test/testKernel/makefile
+++ b/source/test/testKernel/makefile
@@ -16,7 +16,7 @@ ProjectLinkFlag=
 LinkLibs:=osi_interface ngoskernel uiobjects lua ngre_engine ngre_script ngrm toolkit
 
 ifeq ($(ARCH), android)
-	LinkLibs += skia stdc++ stlport c m
+	LinkLibs += skia stdc++ stlport c m cutils 
 else
 	LinkLibs += rt pthread cityhash jpeg pthread freetype fontconfig dl GL GLU png skia_effects skia_images skia_core skia_opts skia_opts_ssse3 skia_ports skia_sfnt skia_utils skia_gr skia_skgr 
 endif
