--- a/source/mk.config
+++ b/source/mk.config
@@ -1,6 +1,7 @@
-ARCH=android
+ARCH=pc
+CONFIG_NAME =Debug
 ANDROID_PATH=/media/android/android-4.0.3_r1
-SKIA_PATH=~/skia/trunk/
+SKIA_PATH=/root/win_work/skia
 SKIA_OUT:=$(SKIA_PATH)/linux_out/$(CONFIG_NAME)/obj.target/gyp
 
 ifeq ($(ARCH),pc)
@@ -45,7 +46,7 @@ LINKER=$(ANDROID_BUILD_TOOL)g++ -L$(ANDROID_PATH)/out/target/product/generic/obj
 ARLIB=$(ANDROID_BUILD_TOOL)ar
 endif
 
-CONFIG_NAME = Debug
+
 
 
 ifeq ($(CONFIG_NAME),Debug)
