1.保存各种修改后的init.rc 2.修改makefile,可以在google官方nexus7 4.1的环境下大部分编译通过了 3.修改makefile和代码文件，注意路径是大小写敏感的。

--- a/source/test/input/makefile
+++ b/source/test/input/makefile
@@ -10,7 +10,7 @@ ProjectCFlag=
 ProjectCppFlag= $(ProjectCFlag)
 
 ProjectLinkFlag= 
-LinkLibs=
+LinkLibs+=stdc++ stlport c m
 ####################################################################
 cfiles_root := $(wildcard *.c)
 cobjs_root := $(patsubst %.c,$(TEMP_DIR)%.co,$(notdir $(cfiles_root)))
