--- a/source/src/demo_desktop/makefile
+++ b/source/src/demo_desktop/makefile
@@ -14,7 +14,7 @@ LibDirs=$(OUTPUT) $(SKIA_OUT) $(OUTPUT)../../resource_manager/$(CONFIG_NAME) $(O
 LinkLibs=ngoskernel osi_interface uiobjects inputreader toolkit lua ngre_engine ngre_script ngrm
 
 ifeq ($(ARCH), android)
-	LinkLibs += skia stdc++ stlport c m
+	LinkLibs += skia stdc++ stlport c m EGL hardware GLESv1_CM ui
 else
 ifeq ($(ARCH), android41)
 	LinkLibs += skia stdc++ stlport c m
