修改demodesktop,适应galaxy nexus的分辨率，也是我们的主要演示设备。

--- a/source/src/demo_desktop/makefile
+++ b/source/src/demo_desktop/makefile
@@ -3,7 +3,7 @@ include ../../mk.config
 ProjectName=DemoOS
 ModuleName=demo_desktop
 TargetType=Execute
-Target=demodesktop
+Target=demo
 
 IncludeDirs = 
 ProjectCFlag= -I ../../inc -I ../../src/render/RenderScript -I ../../src/render/RenderEngine -I../../src/resource_manager 
